<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/id_register_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_title"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/padding_vertical"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_register_form_title"
        android:layout_above="@id/id_register_btn_register">

        <LinearLayout
            android:id="@+id/id_register_form_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_register_til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_register_edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_username"
                    android:inputType="text"
                    android:textColor="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_register_til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_register_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_phone_number"
                    android:inputType="number"
                    android:textColor="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_register_gender"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/id_register_rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="25dp"
                        android:text="@string/activity_register_male"
                        android:buttonTint="@color/colorPrimary"/>

                    <RadioButton
                        android:id="@+id/id_register_rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_register_female"
                        android:layout_marginEnd="25dp"
                        android:buttonTint="@color/colorPrimary"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_register_date_of_birth"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/id_register_btn_date"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:onClick="clickDOB"
                        android:text="@string/activity_register_select_date"
                        android:background="@color/colorLightBlue"
                        android:textColor="@android:color/white"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/id_register_til_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintTextColor="@android:color/black"
                        android:textAlignment="center"/>

                </LinearLayout>

            </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_register_til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_register_edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_register_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_register_til_cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_register_edt_cpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_register_confirmation_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"/>

                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/id_register_cb_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:text="@string/activity_register_terms_and_condition"
                    android:buttonTint="@color/colorPrimary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_register_til_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintTextColor="@android:color/black"
                    android:textAlignment="center"/>

            </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/id_register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/activity_register_register"
        android:onClick="clickRegister"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:background="@color/colorLightBlue"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/padding_horizontal"/>

</RelativeLayout>

